# rlm-codelens

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  clustering.py  config.py  data_collection.py  demo_analysis.sh  embeddings.py  issue_correlation.py  main.py  pyproject.toml  report_generation.py  rlm_analysis.py  run_analysis.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API_KEYS.md  ARCHITECTURE_DIAGRAMS.md  SECURITY.md
samples/: kubernetes_report.html  kubernetes_viz.html
src/rlm_codelens/: __init__.py  __main__.py  architecture_analyzer.py  cli.py  clustering.py  codebase_graph.py  commands.py  config.py  data_collection.py  embeddings.py  issue_correlation.py  language_support.py  repo_scanner.py  report_generation.py  report_generator.py  rlm_analysis.py  visualizer.py
src/rlm_codelens/core/: analyzer.py  config.py
src/rlm_codelens/utils/: __init__.py  cost_estimator.py  cost_tracker.py  database.py  secure_logging.py  secure_rlm_client.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_pipeline.py
tests/unit/: test_architecture_analyzer.py  test_codebase_graph.py  test_core.py  test_repo_scanner.py  test_report_generator.py
utils/: cost_tracker.py  database.py  secure_rlm_client.py
visualization/: architecture_graph_viewer.html  issue_graph_visualization.html
