[project]
name = "rlm-codelens"
version = "0.2.1"
description = "Codebase architecture intelligence powered by Recursive Language Models — whole-codebase static analysis, module dependency graphs, and RLM-driven semantic insights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nijesh Kanjinghat", email = "nijesh@example.com"}
]
keywords = ["rlm", "codebase-analysis", "architecture", "dependency-graph", "static-analysis", "code-intelligence", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rlm = [
    "rlms @ git+https://github.com/alexzhang13/rlm.git",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]

[project.scripts]
rlmc = "rlm_codelens.cli:main"

[project.urls]
Homepage = "https://github.com/knijesh/rlm-codelens"
Repository = "https://github.com/knijesh/rlm-codelens"
Issues = "https://github.com/knijesh/rlm-codelens/issues"
Documentation = "https://github.com/knijesh/rlm-codelens#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_codelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
