[project]
name = "rlm-codelens"
version = "0.2.1"
description = "Codebase architecture intelligence powered by Recursive Language Models — whole-codebase static analysis, module dependency graphs, and RLM-driven semantic insights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nijesh Kanjinghat"}
]
keywords = ["rlm", "codebase-analysis", "architecture", "dependency-graph", "static-analysis", "code-intelligence", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.1.0",
    "python-dotenv>=1.0.0",
    "rlms>=0.1.1",
]

[project.optional-dependencies]
# Per-language tree-sitter grammars
go = ["tree-sitter>=0.23.0", "tree-sitter-go>=0.23.0"]
java = ["tree-sitter>=0.23.0", "tree-sitter-java>=0.23.0"]
rust = ["tree-sitter>=0.23.0", "tree-sitter-rust>=0.23.0"]
javascript = ["tree-sitter>=0.23.0", "tree-sitter-javascript>=0.23.0"]
typescript = ["tree-sitter>=0.23.0", "tree-sitter-typescript>=0.23.0"]
cpp = ["tree-sitter>=0.23.0", "tree-sitter-c>=0.23.0", "tree-sitter-cpp>=0.23.0"]
# Bundles
languages = [
    "rlm-codelens[go,java,rust,javascript,typescript,cpp]",
]
all = [
    "rlm-codelens[languages]",
]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-networkx>=3.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]

[project.scripts]
rlmc = "rlm_codelens.cli:main"

[project.urls]
Homepage = "https://github.com/knijesh/rlm-codelens"
Repository = "https://github.com/knijesh/rlm-codelens"
Issues = "https://github.com/knijesh/rlm-codelens/issues"
Documentation = "https://github.com/knijesh/rlm-codelens#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_codelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rlm_codelens"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/cli.py",
    "*/commands.py",
    "*/config.py",
    "*/visualizer.py",
    "*/language_support.py",
    "*/utils/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
